<resources>
<!--    <string name="app_name">Food e-commerce app</string>-->
    <string name="app_name">Tech Food</string>
    <string name="opening_screen_logo_text">Food</string>
    <string name="opening_screen_logo1">logo1</string>
    <string name="opening_screen_logo2">logo2</string>
    <string name="home_logo_quota">Let\'s order your favourite food!</string>
    <string name="All">All</string>
    <string name="Combos">Combos</string>
    <string name="Classic">Classic</string>
    <string name="Sliders">Sliders</string>
    <string name="Main_Course">Main Course</string>
    <string name="customize">Customization</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="barger_title">Chicken Patty Burger</string>
    <string name="barger_rating">* 4.9 - 34 min</string>
    <string name="price">8.16</string>
    <string name="order">Order Now</string>
    <string name="spicy">Spicy</string>
    <string name="mild">Mild</string>
    <string name="Hot">Hot</string>
    <string name="Quantity">Quantity</string>
    <string name="Quantity_number">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="toppings">Toppings</string>
    <string name="total">Total</string>
    <string name="doller_sign">$</string>
    <string name="amount">16.38</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="chili_flex">Chili Flex</string>
    <string name="capsicum">Capsicum</string>
    <string name="cabbege">Cabbege</string>
    <string name="chese">Chese</string>
    <string name="souce">Souce</string>
    <string name="mayonese">Mayonese</string>
    <string name="patty">Patty</string>
    <string name="chicken">Chicken</string>
    <string name="cucamber">Cucamber</string>
    <string name="customization">Customize Your Burger To Your Tastes. Ultimate Experience</string>
    <string name="barger_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus.,</string>

    <string name="order_summery">Order Summery</string>
    <string name="order_billing">Order</string>
    <string name="order_amount">16.48</string>
    <string name="tax_billing">Taxes</string>
    <string name="tax_amount">0.30</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge_amount">40</string>
    <string name="delivery_time">Estimated Delivery Time</string>
    <string name="time">15 - 30</string>
    <string name="total_price">Total Price</string>
    <string name="mins">mins</string>
    <string name="payment_method">Payment Methods</string>
    <string name="save_card_details">Save card details for future payments</string>
    <string name="pay_now">Pay Now</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_number">5634 **** **** 2390</string>
    <string name="debit_card">Debit Card</string>
    <string name="debit_card_number">8776 **** **** 6723</string>
    <string name="success">Success !</string>
    <string name="success_details">Your for placing order.\nHave a good day with the fresh meal. A mail sent to your E-Mail</string>
    <string name="go_back">Go Back</string>
    <string name="login_quota">India\'s No.1 Food Delivery \n And Serving App </string>
    <string name="login">Log in or sign up</string>
    <string name="continue_login">Continue</string>
    <string name="or">or</string>
    <string name="privacy_policy">By continuing, you agree to our \n Terms of Services Privacy Policy &#x20; &#x20;Content Policy</string>
    <string name="skip">Skip</string>
    <string name="choice_title">WHAT\'S &#x20; &#x20;YOUR &#x20; &#x20;CHOICE</string>
    <string name="all_resturants">ALL RESTURANTS</string>
    <string name="rating">Rating 4.0+</string>
    <string name="weekly_top">Weekly Top</string>
    <string name="sort_items">Sort</string>
    <string name="biriyani">Biriyani</string>
    <string name="pizza">Pizza</string>
    <string name="chicken_choice">Chicken</string>
    <string name="burger_choice">Burger</string>
    <string name="chinese">Chinese</string>
    <string name="paneer">Paneer</string>
    <string name="sandwich">Sandwich</string>
    <string name="chili_chicken">Chili Chicken</string>
    <string name="manchurian">Manchurian</string>
    <string name="egg_roll">Egg Roll</string>
    <string name="cake">Cake</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="resturant_name">Red Chili Resturant</string>
    <string name="rating_value">4.3</string>
    <string name="dot">.</string>
    <string name="food_destination">North Indian</string>
    <string name="price_for_one">150</string>
    <string name="inr_sign">₹</string>
    <string name="for_one">For One</string>
    <string name="km_value">4.6</string>
    <string name="km">km</string>
    <string name="rating_star">*</string>
    <string name="payment">PAYMENT</string>
    <string name="credit_card_value">CARD NUMBER</string>
    <string name="debit_card_value">DEBIT CARD NUMBER</string>
    <string name="card_name">CARD HOLDER NAME</string>
    <string name="ccv">CCV</string>
    <string name="expiry">EXPIRY</string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="colon">:</string>
    <string name="inr_value">995</string>
    <string name="verification_code">Verification Code</string>
    <string name="varification_details">Please type the verification code sent</string>
    <string name="varification_details2">to you email</string>
    <string name="email_account">samplesamp22@gmail.com</string>
    <string name="resend_otp_in">Resend OTP</string>
    <string name="resend">Resend</string>
    <!--    <string name="second_timer">00:00:00</string>-->
    <string name="second_timer"></string>
    <string name="second_s">s</string>
    <string name="varify">Verify</string>
    <string name="enter_email">Enter Your e-mail</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="advertise">DESIGNED AND DEVELOPED BY ATISH BASAK</string>
    <string name="about">About</string>
    <string name="contact">Contact Me</string>
    <string name="reviews">Reviews</string>
    <string name="about_me">Hello, I am ATISH BASAK a Web Developer + Android Developer</string>
    <string name="about_app">This Application is a project of app development so, do not worry about to place order, it\'s just a demo order.</string>
    <!--    <string name="resume"><a href='https://atish-basak.netlify.app/Resume'>Resume</a></string>-->
    <string name="resume">Resume</string>
    <string name="intro_heading1">Specialist Creative</string>
    <string name="intro_heading2">About The App,</string>
    <string name="atish">TISH</string>
    <!--    <string name="download_cv"><a href='https://atish-basak.netlify.app/Resume'>Download CV</a></string>-->
    <string name="download_cv">Download CV</string>
    <string name="all_works">All Creative Works</string>
    <string name="works_description">Let\'s see some work.Here are some works on application development and web development</string>
    <string name="app_development">App Development</string>
    <string name="app_development_quote">App development is turning ideas into interactive experiences that engage and empower users</string>
    <string name="web_development">Web Development</string>
    <string name="web_development_quote">Web development transforms ideas into dynamic, accessible experiences across the digital landscape</string>
    <string name="See_Projects"> <u>See Projects</u></string>
    <string name="hire_me">Hire Me</string>
    <string name="contact_me">Contact Me</string>
    <string name="send">Send</string>
    <string name="gmail_text">atishbasak24@gmail.com</string>
    <string name="calling_text">**********</string>
    <string name="address_text">Address : ***********************************</string>
    <string name="tomatotop_price">25</string>
    <string name="cross">×</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="full_name">Full Name (First And Last Name)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="flat_house">Flat, House no., Building, Company, Apartment</string>
    <string name="area_street">Area, Street, Sector, Village</string>
    <string name="pincode">Pincode</string>
    <string name="town_city">Town/City</string>
    <string name="enter_state">Enter State</string>
    <string name="use_my_location">Use My Location</string>
    <string name="email">Email</string>
    <string name="zero">0</string>
    <string name="remove">Remove</string>

</resources>