<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCard"
        android:layout_width="361dp"
        android:layout_height="333dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cardIMG"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/chili_chicken_main2" />

        <TextView
            android:id="@+id/cardTITLE"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="210dp"
            android:text="@string/resturant_name"
            android:textColor="#050505"
            android:textSize="28sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/ratingOFFOOD"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:text="@string/rating_value"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView75"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="33dp"
                android:layout_marginBottom="4dp"
                android:text="@string/rating_star"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dishNAME"
            android:layout_width="114dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="250dp"
            android:text="@string/biriyani" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="15dp"
            android:layout_height="70dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="213dp"
            android:text="@string/dot"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="15dp"
            android:layout_height="70dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="212dp"
            android:text="@string/dot"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/foodDESTINATION"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="138dp"
            android:layout_marginTop="250dp"
            android:text="@string/food_destination" />

        <TextView
            android:id="@+id/foodPRICE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="250dp"
            android:text="@string/price_for_one" />

        <TextView
            android:id="@+id/forNUMMBERpeople"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="250dp"
            android:text="@string/for_one" />

        <View
            android:id="@+id/divider8"
            android:layout_width="352dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="290dp"
            android:background="?android:attr/listDivider"
            android:onClick="openActivityItem" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/timer_logo" />

        <TextView
            android:id="@+id/deliveryTIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="12dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="15dp"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="5dp"
            android:text="@string/dot"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="12dp"
            android:text="@string/km_value" />

    </androidx.cardview.widget.CardView>
</LinearLayout>