<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/cartNoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="305dp"
            android:layout_marginTop="70dp"
            android:text="@string/Quantity_number"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/itemTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="206dp"
            android:layout_marginBottom="5dp"
            android:text="@string/inr_value"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView84"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="193dp"
            android:layout_marginBottom="5dp"
            android:text="@string/inr_sign"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="180dp"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textColor="@color/endColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="5dp"
            android:text="@string/total"
            android:textColor="@color/endColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="70dp"
            android:text="@string/inr_value"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView79"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="70dp"
            android:text="@string/inr_sign"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/cartResturantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/resturant_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartDISH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/biriyani"
            android:textColor="@color/button_text_color"
            android:textSize="17sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="1000dp"
            app:cardElevation="100dp">

            <ImageView
                android:id="@+id/cartIMG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chili_chicken_main2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView91"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="70dp"
            android:text="@string/Quantity"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="295dp"
            android:layout_marginTop="72dp"
            android:text="@string/colon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView93"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="295dp"
            android:layout_marginTop="102dp"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:translationZ="999dp" />

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="95dp"
            android:backgroundTint="@color/brown"
            android:text=""
            app:cornerRadius="5dp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>