<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentInterface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:srcCompat="@drawable/arrow" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToBilling"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013"
            app:srcCompat="@drawable/credit_card" />

        <androidx.cardview.widget.CardView
            android:id="@+id/paymentCard"
            android:layout_width="409dp"
            android:layout_height="300dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814">

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/credit_card_value"
                android:textColor="@color/button_text_color" />

            <EditText
                android:id="@+id/numberValue"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/nameValue"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="130dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/holderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="110dp"
                android:text="@string/card_name"
                android:textColor="@color/button_text_color" />

            <EditText
                android:id="@+id/expiryValue"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="210dp"
                android:ems="10"
                android:inputType="date" />

            <EditText
                android:id="@+id/ccvValue"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="210dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/expiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="190dp"
                android:text="@string/expiry"
                android:textColor="@color/button_text_color" />

            <TextView
                android:id="@+id/ccvNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="252dp"
                android:layout_marginTop="190dp"
                android:text="@string/ccv"
                android:textColor="@color/button_text_color" />

            <CheckBox
                android:id="@+id/checkBoxSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="250dp"
                android:text="@string/save_card_details"
                android:textColor="@color/button_text_color" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/proceedToPay"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="goTOOtpPage"
            android:text="@string/proceed_to_pay"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="47dp"
            android:layout_height="33dp"
            android:layout_marginBottom="17dp"
            android:text="@string/total"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/proceedToPay"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentCard"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/colon"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/proceedToPay"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView49"
            app:layout_constraintTop_toBottomOf="@+id/paymentCard"
            app:layout_constraintVertical_bias="0.925" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/inr_sign"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/proceedToPay"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toEndOf="@+id/textView68"
            app:layout_constraintTop_toBottomOf="@+id/paymentCard"
            app:layout_constraintVertical_bias="0.557" />

        <TextView
            android:id="@+id/paymentValue"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="26dp"
            android:text="@string/inr_value"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/proceedToPay"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toEndOf="@+id/textView68"
            app:layout_constraintTop_toBottomOf="@+id/paymentCard"
            app:layout_constraintVertical_bias="0.574" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>